added all files

--- a/index.html
+++ b/index.html
@@ -1,6 +1,72 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="/resources/css/styles/mainpage.css">
+        <link rel="stylesheet" href="resources/css/styles/mainpage.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Italianno&family=Playfair+Display&family=Roboto+Condensed&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="resources/css/styles/flickity.css">
     </head>
+    <body>
+        <nav>
+            <div class="name">
+                <p>Zac Booth</p>
+            </div>
+            <div class="links">
+                <ul>
+                    <a class="link" href="#about"><li>About</li></a>
+                    <a class="link" href="#projects"><li>Projects</li></a>
+                    <a class="link" href="html/contact.html"><li>Contact</li></a>
+                </ul>
+            </div>
+        </nav>
+        <div id="about">
+            <div class="info">
+                <h2>About Me</h2>
+                <p>Hi. My name is Zac. Im currently a trainee airline pilot who also loves computers and making them do stuff. In my spare time from studying and flying im learning off Codeacademy and currently working through there <em>Full Stack Engineering</em> path in hopes to use my skills to work on personal projects with friends and alone. Im currently focused on HTML, CSS and JavaScript. Please find below my projects I have completed with Codecademy, this website is also a project task. </p>
+            </div>
+            <div class="image">
+                <img src="resources/images/me.jpg">
+            </div>
+        </div>
+        <div id="projects" data-flickity='{"wrapAround": true}'>
+            <div class="carousel-cell">
+                <div class="project-title">
+                    <h3>Excursion</h3>
+                </div>
+            </div>
+            <div class="carousel-cell">
+                <div class="project-title">
+                    <h3>Fotomatic</h3>
+                </div>
+            </div>
+            <div class="carousel-cell">
+                <div class="project-title">
+                    <h3>Project 1</h3>
+                </div>
+            </div>
+            <div class="carousel-cell">
+                <div class="project-title">
+                    <h3>Project 1</h3>
+                </div>
+            </div>
+            <div class="carousel-cell">
+                <div class="project-title">
+                    <h3>Project 1</h3>
+                </div>
+            </div>
+            <div class="carousel-cell">
+                <div class="project-title">
+                    <h3>Project 1</h3>
+                </div>
+            </div>
+            <div class="carousel-cell">
+                <div class="project-title">
+                    <h3>Project 1</h3>
+                </div>
+            </div>
+        </div>
+        <script src="resources/js/mainpage.js"></script>
+        <script src="resources/js/flickity.pkgd.js"></script>
+    </body>
 </html>
