--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div id="projects" data-flickity='{"wrapAround": true}'>
             <div class="carousel-cell">
                 <div class="project-title">
-                    <h3>Excursion</h3>
+                    <h3><a href="projects/excursion/index.html">Excursion</a></h3>
                 </div>
             </div>
             <div class="carousel-cell">
