added all files

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div id="projects" data-flickity='{"wrapAround": true}'>
             <div class="carousel-cell">
                 <div class="project-title">
-                    <h3><a href="projects/excursion/index.html">Excursion</a></h3>
+                    <h3>Excursion</h3>
                 </div>
             </div>
             <div class="carousel-cell">
@@ -42,27 +42,22 @@
             </div>
             <div class="carousel-cell">
                 <div class="project-title">
-                    <h3>Project 1</h3>
+                    <h3>Foodly</h3>
                 </div>
             </div>
             <div class="carousel-cell">
                 <div class="project-title">
-                    <h3>Project 1</h3>
+                    <h3>Dasmotos</h3>
                 </div>
             </div>
             <div class="carousel-cell">
                 <div class="project-title">
-                    <h3>Project 1</h3>
+                    <h3>TeaCozy</h3>
                 </div>
             </div>
             <div class="carousel-cell">
                 <div class="project-title">
-                    <h3>Project 1</h3>
-                </div>
-            </div>
-            <div class="carousel-cell">
-                <div class="project-title">
-                    <h3>Project 1</h3>
+                    <h3>RUG</h3>
                 </div>
             </div>
         </div>
