--- a/projects/excursion/index.html
+++ b/projects/excursion/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <link href="resources/css/style.css" rel="stylesheet">
+        <title>Excursion</title>
     </head>
     <header>
         <h1>Discover hidden places in the world around you</h1>
